# deeptrading

./: .dockerignore  .gitignore  Cargo.toml  build.sh  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: code-validation.yml
docker/: host.Dockerfile  node.Dockerfile
docker/grafana/dashboards/: infrastructure_monitoring.json
docker/grafana/provisioning/datasources/: datasource.yml
docker/prometheus/: prometheus.yml
trade-core/: Cargo.toml
trade-core/src/: lib.rs  stock.rs
trade-core/src/data/database/: in_memory.rs  influx.rs  mod.rs
trade-core/src/models/: candle.rs
trade-host/: Cargo.toml  recipe.json
trade-host/src/: config.rs  host.rs  lib.rs
trade-host/src/services/: binance.rs  certificate_check.rs  k8s.rs  mod.rs  recoverer.rs  trade_protocol.rs
trade-ml/: predictor.py  setup.py  stock_price.ipynb  stock_price_reinforcement.ipynb
trade-ml/models/model_ep0/: saved_model.pb
trade-ml/models/model_ep0/variables/: variables.index
trade-ml/models/model_ep10/: keras_metadata.pb  saved_model.pb
trade-ml/models/model_ep10/variables/: variables.data-00000-of-00001
trade-ml/src/: test_ai.ipynb
trade-ml/src/trademl/: candle.py  entrypoint.py  envs.py  interface.py  model.py  predictor.py  run.py  utils.py
trade-ml/src/trademl/ai/: environment.py  network.py
trade-ml/src/trademl/bridge/: __init__.py
trade-ml/trademl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
trade-node/: Cargo.toml  recipe.json
trade-node/docker/: init.sh
trade-node/src/: config.rs  interface.rs  lib.rs  pyd.rs
trade-protocol/: Cargo.toml
trade-protocol/src/: client.rs  lib.rs  listener.rs
trade-protocol/src/encoding/: mod.rs
trade-protocol/src/packets/: allocation.rs  heartbeat.rs  mod.rs
trade-protocol/src/services/: mod.rs
trade-protocol/tests/: connection_tests.rs
trade-web/: Dockerfile  package.json  svelte.config.js
trade-web/src/models/: candle.ts
trade-web/src/routes/: __error.svelte  __layout.svelte  index.svelte
trade-web/src/routes/tools/: inflation_visualizer.svelte
