[package]
name = "trade-host"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "trade-hostd"
path = "src/bin/daemon/main.rs"

[dependencies]
async-trait = "0.1.53"
atty = "0.2"
chrono = "0.4"
colored = "2.0.0"
time = "0.3.9"
rustls = "0.20.5"
trade-core = { path = "../trade-core" }
trade-protocol = { path = "../trade-protocol" }
serde = { version = "1.0.137", features = ["derive"] }
futures-util = { version = "0.3.21" }
tokio = { version = "1.18.1", features = ["full"] }
tracing = "0.1.34"
tracing-core = "0.1.26"
tracing-futures = { version = "0.2.5" }
dotenv = "0.15.0"
envy = "0.4"
rcgen = "0.9.2"
rustls-pemfile = "1.0.0"
x509-parser = "0.13.2"
quinn = "0.8.2"
binance-rs-async = { version = "1.1.5", default-features = false, features = ["rustls-tls", "all_apis"]}
tracing-opentelemetry = "0.17.2"
kube = { version = "0.73.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.15.0", features = ["v1_24"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.2"
opentelemetry = { version = "0.17.0", features = [ "rt-tokio" ] }
opentelemetry-jaeger = { version = "0.16.0", features = [ "rt-tokio", "collector_client", "isahc_collector_client" ] }
chashmap = "2.2.2"
teloc = "0.2.0"
crossbeam-channel = "0.5.4"