[package]
name = "trade-node"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "trade-noded"
path = "src/bin/daemon/main.rs"

[dependencies]
atty = "0.2"
colored = "2.0.0"
trade-core = { path = "../trade-core" }
trade-protocol = { path = "../trade-protocol" }
serde = { version = "1.0.137", features = ["derive"] }
tokio = { version = "1.18.1", features = ["full"] }
tracing = "0.1.34"
tracing-core = "0.1.26"
tracing-subscriber = "0.3.11"
tracing-futures = { version = "0.2.5" }
dotenv = "0.15.0"
envy = "0.4"
pyo3 = { version = "0.16.4", features = ["auto-initialize"] }
rustls = { version = "0.20.5", features = ["dangerous_configuration"] }
tracing-opentelemetry = "0.17.2"
opentelemetry-jaeger = "0.16.0"
opentelemetry = "0.17.0"
tarpc = { version = "0.29.0", features = ["full"] }