[package]
name = "trade-protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.53"
serde = { version = "1.0.137", features = ["derive"] }
bincode = "1.3.3"
quinn = "0.8.2"
rustls = { version = "0.20.5", features = ["dangerous_configuration"] }
tracing = "0.1.34"
tracing-futures = { version = "0.2.5" }
futures-util = { version = "0.3.21", features = ["sink"] }
tokio = { version = "1.18.2", features = ["full"] }
tokio-util = { version = "^0.6", features = ["codec", "compat"] }
#tokio-serde-bincode = "0.2"
chrono = "0.4.19"
crossbeam = "0.8"
bus = "2.2.3"
tarpc = { version = "0.29.0", features = ["full"] }
futures = "0.3.21"
tokio-serde = { version = "0.8.0", features = ["bincode"] }

[dev-dependencies]
rcgen = "0.9.2"
tracing-test = "0.2.1"